--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
 *.mp4
+build/
+install/
 
 # User-specific files
 *.rsuser
@@ -111,7 +113,6 @@ ipch/
 *.ncb
 *.opendb
 *.opensdf
-*.sdf
 *.cachefile
 *.VC.db
 *.VC.VC.opendb
